--- a/Aulas/aula_06/loja-games-back/src/main/resources/application.properties
+++ b/Aulas/aula_06/loja-games-back/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost/db_jogos?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=admin123
+spring.jpa.hibernate.ddl-auto=update
